Correcting text align in parents section

--- a/scss/_style-parents.scss
+++ b/scss/_style-parents.scss
@@ -231,14 +231,13 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        padding-top: 80px;
+        padding-top: 130px;
         padding-bottom: 80px;
         .container-parents{
             width: 80%;
-            margin-top: 50px;
             .husband-bride-parents{
                 flex-direction: column;
-                gap: 20px;
+                gap: 10px;
                 justify-content: center;
                 align-items: center;
                 .parent{
@@ -249,14 +248,24 @@
                         text-align: center;
                     }
                 }
-                
+                #husband-parents{
+                    h2{
+                        text-align: center;
+                    }
+                }
+                #bride-parents{
+                    h2{
+                        text-align: center;
+                    }
+                }
                 #salud{
                     height: 100px;
                 }
             }
             p{
-                width: 90%;
-                margin-top: 20px;
+                width: 100%;
+                margin-top: 30px;
+                margin-bottom: 0;
             }
         }
         .background-leaf-left{
