--- a/scss/_style-variables.scss
+++ b/scss/_style-variables.scss
@@ -219,9 +219,11 @@ a{
 @media screen and (max-width: 768px){
     h1{
         font-size: 40px;
+        line-height: 30px;
     }
     h2{
         font-size: 16px;
+        line-height: 25px;
     }
     h3{
         font-size: 12px;
